option('tensorflow_include', 
       type: 'array',
       value: ['/usr/local/include/tensorflow/'],
       description: 'Paths to tensorflow include directories')

option('protobuf_include',
       type: 'array',
       value: ['/usr/local/include/'],
       description: 'Paths to protobuf include directories')

option('openblas_include',
       type: 'array',
       value: ['/usr/include/openblas/'],
       description: 'Paths to openblas include directories')

option('opencl_include',
       type: 'array',
       value: ['/usr/include/'],
       description: 'Paths to OpenCL include directories')

option('tensorflow_libdir',
       type: 'array',
       value: ['/usr/local/lib/tensorflow_cc/'],
       description: 'Paths to tensorflow libraries')

option('protobuf_libdir',
       type: 'array',
       value: ['/usr/lib/x86_64-linux-gnu/'],
       description: 'Paths to protobuf libraries')

option('openblas_libdirs',
       type: 'array',
       value: ['/usr/lib/'],
       description: 'Paths to OpenBLAS libraries')

option('opencl_libdirs',
       type: 'array',
       value: ['/opt/cuda/lib64/', '/usr/local/cuda/lib64/'],
       description: 'Paths to OpenCL libraries')

option('cudnn_libdirs',
       type: 'array',
       value: ['/opt/cuda/lib64/', '/usr/local/cuda/lib64/'],
       description: 'Paths to Cuda/cudnn libraries')

option('mkl_libdirs',
       type: 'array',
       value: ['/opt/intel/lib/intel64', '/opt/intel/mkl/lib/intel64', '/opt/intel/mkl/lib'],
       description: 'Paths to MKL libraries')

option('mkl_include',
       type: 'array',
       value: ['/opt/intel/mkl/include'],
       description: 'Paths to MKL libraries')

option('cudnn_include', 
       type: 'array',
       value: ['/opt/cuda/include/', '/usr/local/cuda/include/'],
       description: 'Paths to cudnn include directory')

option('build_backends',
       type: 'boolean',
       value: true,
       description: 'Build backends for NN computation')

option('blas',
       type: 'boolean',
       value: true,
       description: 'Enable BLAS backend')

option('ispc',
       type: 'boolean',
       value: true,
       description: 'use ispc')

option('ispc_native_only',
       type: 'boolean',
       value: true,
       description: 'use ispc and enable native arch only')

option('cudnn',
       type: 'boolean',
       value: true,
       description: 'Enable cuDNN backend')

option('opencl',
       type: 'boolean',
       value: true,
       description: 'Enable OpenCL backend')

option('tensorflow',
       type: 'boolean',
       value: false,
       description: 'Enable TensorFlow backend')

option('openblas',
       type: 'boolean',
       value: true,
       description: 'Enable OpenBLAS support')

option('mkl',
       type: 'boolean',
       value: true,
       description: 'Enable MKL BLAS support')

option('accelerate',
       type: 'boolean',
       value: true,
       description: 'Enable Accelerate BLAS support')

option('popcnt',
       type: 'boolean',
       value: true,
       description: 'Use the popcnt instruction')

option('pext',
       type: 'boolean',
       value: false,
       description: 'Use the pext instruction')

option('gtest',
       type: 'boolean',
       value: true,
       description: 'Build gtest tests')

option('protobuf-3-6-0',
       type: 'boolean',
       value: false,
       description: 'Use the protobuf 3.6.0 subproject')
